fix steps section on mobile

--- a/css/apps-village-ltd-new.webflow.css
+++ b/css/apps-village-ltd-new.webflow.css
@@ -1364,7 +1364,7 @@ html.w-mod-js *[data-ix="come-from-left"] {
     margin-top: 24px;
   }
   .step-image.step-image-1 {
-    padding-top: 35px;
+    padding-top: 36px;
   }
   .step-image.step-image-2 {
     padding-top: 35px;
@@ -1434,7 +1434,7 @@ html.w-mod-js *[data-ix="come-from-left"] {
     margin-top: 14px;
   }
   .video-heading {
-    font-size: 23px;
+    font-size: 19px;
     line-height: 25px;
   }
   .video-place-holder {
